# waves-emscripten

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  move.sh  wasm.sh
src/: Board.c  Board.h  board.c  board.h  calc.c  calc.h  image.c  image.h  main.c  main.h  patch.c  patch.h  table.c  table.h
src/image/: image.c  image.h  palette.c  palette.h
src/patch/: patch.c  patch.h  phasepatch.c  phasepatch.h
src/regular/: regular.c  regular.h
